# MultiCan

./: .gitignore  CMakeLists.txt  CanAn.cpp  CanAn.h  LICENSE.txt  MainWindow.cpp  MainWindow.h  Makefile.win  MultiCan.cpp  MultiCan.dev  MultiCan.layout  MultiCan.manifest
Common/: CmdLine.h  ExtString.cpp  ExtString.h  FileIO.h  GridWindow.cpp  GridWindow.h  L2List.h  TitleWindow.cpp  TitleWindow.h  UndoList.h  WinWndClasser.h  nPoint.cpp  nPoint.h  Тест вставки.txt
Languages/: Russian.h
MultiCan/: Commands.h  Resources.h  Resources.rc  Strings.h
Resources/: Help.chm
Resources/Help/: Index.htm  MultiCan.hhc  MultiCan.hhk  MultiCan.hhp  ReferenceList.htm  styles.css
Resources/Help/Work/: AddData.htm  Analysis.htm  ExtraOptions.htm  StartWork.htm
Resources/Icons/: MainIcon.nb
Resources/Music/: Аранжировка.mscz  Исходник.mscz
Resources/Title/: Title.xcf
Примеры/: Group6.mcd  Template.mcd  Test.mcd  Корреляционная матрица (полная).nb  Корреляционные матрицы.nb  Тест.nb  Тестовый с правильной матрицей.mcr  Тестовый со стандартной матрицей.mcr
